--- a/fe-jeopardy/src/app/game/recv-buzz/recv-buzz.component.html
+++ b/fe-jeopardy/src/app/game/recv-buzz/recv-buzz.component.html
@@ -1,4 +1,8 @@
 <div>
+    <span>Category: {{ game.CurCategory() }} </span>
+    <br>
+    <span *ngIf="game.CurComments() != ''">Comments: {{ game.CurComments() }}</span>
+    <br>
     Question: {{ game.CurQuestion() }}
     <br>
     Value: {{ game.CurValue() }}
