--- a/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.html
+++ b/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.html
@@ -1,21 +1,19 @@
 <div>
+    <p *ngIf="game.PreviousAnswer() != ''">Previous answer: {{ game.PreviousAnswer() }}</p>
     <p>It is {{ game.PickingPlayer() }}'s turn to pick a question</p>
     <table>
         <tr>
-            <td *ngFor="let title of topics">
+            <td *ngFor="let title of categories">
                 {{ title }}
             </td>
         </tr>
         <tr *ngFor="let row of questionRows; let valIdx = index">
-            <td
-            *ngFor="let q of row; let topicIdx = index"
-            (mouseover)="highlightQuestion($event, 'lightgreen')"
-            (mouseout)="highlightQuestion($event, 'white')"
-            (click)="handlePick(topicIdx, valIdx)"
-            [ngStyle]="{'background-color': q.canChoose ? 'white' : 'lightpink'}">
+            <td *ngFor="let q of row; let catIdx = index" (mouseover)="highlightQuestion($event, 'lightgreen')"
+                (mouseout)="highlightQuestion($event, 'white')" (click)="handlePick(catIdx, valIdx)"
+                [ngStyle]="{'background-color': q.canChoose ? 'white' : 'lightpink'}">
                 {{ q.value }}
             </td>
         </tr>
     </table>
-    <p  *ngIf="player.CanPick()">seconds to pick: {{ countdownSeconds }}</p>
+    <p *ngIf="player.CanPick()">seconds to pick: {{ countdownSeconds }}</p>
 </div>
