always show countdown

--- a/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.html
+++ b/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.html
@@ -16,5 +16,5 @@
             </td>
         </tr>
     </table>
-    <p *ngIf="player.CanPick()">seconds to pick: {{ countdownSeconds }}</p>
+    <p>seconds to pick: {{ countdownSeconds }}</p>
 </div>
