fix final answer and wager timeouts

--- a/fe-jeopardy/src/app/game/recv-ans/recv-ans.component.html
+++ b/fe-jeopardy/src/app/game/recv-ans/recv-ans.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="!game.FinalRound()">
     <div>
-        Question: {{ game.CurQuestion() }}
-        <br>
-        Value: {{ game.CurValue() }}
-        <br>
+        <p>Category: {{ game.CurCategory() }}</p>
+        <p *ngIf="game.CurComments() != ''">Comments: {{ game.CurComments() }}</p>
+        <p>Question: {{ game.CurQuestion() }}</p>
+        <p>Value: {{ game.CurValue() }}</p>
     </div>
 
     <div *ngIf="player.CanAnswer()">
@@ -19,7 +19,10 @@
 
 <div *ngIf="game.FinalRound()">
     Final Jeopardy
+    <p>Category: {{ game.CurCategory() }}</p>
+    <p *ngIf="game.CurComments() != ''">Comments: {{ game.CurComments() }}</p>
     <p>Question: {{ game.CurQuestion() }}</p>
+    <p>Wager: {{ player.FinalWager() }} </p>
     <div *ngIf="player.CanAnswer()">
         <input type="text" [(ngModel)]="questionAnswer" placeholder="Enter your answer">
         <button (click)="handleAnswer()">Answer</button>
