--- a/fe-jeopardy/src/app/game/recv-buzz/recv-buzz.component.html
+++ b/fe-jeopardy/src/app/game/recv-buzz/recv-buzz.component.html
@@ -3,9 +3,9 @@
     <p *ngIf="game.CurComments() != ''">Comments: {{ game.CurComments() }}</p>
     <p>Question: {{ game.CurQuestion() }}</p>
     <p>Value: {{ game.CurValue() }}</p>
-    <div *ngIf="player.CanBuzz()">
+    <div *ngIf="player.CanBuzz() && !game.BuzzBlocked()">
         <button (click)="handleBuzz(false)">Buzz</button>
         <button (click)="handleBuzz(true)">Pass</button>
     </div>
-    <p>seconds to buzz: {{ countdownSeconds }}</p>
+    <p *ngIf="!game.BuzzBlocked()">seconds to buzz: {{ countdownSeconds }}</p>
 </div>
