--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -21,3 +21,5 @@
 <app-recv-wager *ngIf="game.RecvWager()" [countdownSeconds]="countdownSeconds"></app-recv-wager>
 
 <app-post-game *ngIf="game.PostGame()"></app-post-game>
+
+<app-chat></app-chat>
