Add unread message notification in chat component

--- a/fe-jeopardy/src/app/game/chat/chat.component.html
+++ b/fe-jeopardy/src/app/game/chat/chat.component.html
@@ -17,5 +17,6 @@
 </div>
 
 <div *ngIf="hideChat" id='chat-box' (click)="openChat()">
+    <div id='unread-notif' *ngIf="unreadMessages > 0">{{ unreadMessages }}</div>
     <ion-icon name="chatbubbles-outline"></ion-icon>
 </div>
