--- a/fe-jeopardy/src/app/game/game.component.less
+++ b/fe-jeopardy/src/app/game/game.component.less
@@ -1,3 +1,18 @@
+#jeopardy-music {
+    position: fixed;
+    left: 10px;
+    top: 70px;
+
+    ion-icon {
+        font-size: 2em;
+    }
+
+    ion-icon:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+}
+
 #joinLink {
     color: blue;
     text-decoration: underline;
