--- a/fe-jeopardy/src/app/game/game.component.less
+++ b/fe-jeopardy/src/app/game/game.component.less
@@ -11,6 +11,35 @@
         cursor: pointer;
         transform: scale(1.1);
     }
+
+    @keyframes moveUpDown {
+
+        0%,
+        1000% {
+            transform: translateY(0);
+        }
+
+        50% {
+            transform: translateY(-5px);
+        }
+    }
+
+    #music-info {
+        animation: moveUpDown 1s infinite;
+
+        ion-icon {
+            font-size: 1em;
+        }
+
+        ion-icon:hover {
+            cursor: default;
+            transform: none;
+        }
+
+        p {
+            margin: 0;
+        }
+    }
 }
 
 #joinLink {
