--- a/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.less
+++ b/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.less
@@ -1,6 +1,23 @@
-td {
-    border: 1px solid black;
+table {
     border-collapse: collapse;
-    padding: 0.5em;
-    text-align: center;
+
+    td {
+        min-width: 100px;
+        max-width: 100px;
+        min-height: 50px;
+        max-height: 50px;
+        border: 5px solid black;
+        padding: 10px;
+        text-align: center;
+        background-color: #060ce9;
+        font-weight: bold;
+    }
+
+    .category {
+        color: white;
+    }
+
+    .question {
+        color: #ffcc00;
+    }
 }
