--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div class="toolbar" role="banner">
-	<img width="40" height="40" alt="Jeopardy Logo"
-		src="https://static.wikia.nocookie.net/gameshows/images/2/2e/Jeopardy%21_%28Monogram%29.svg" />
-	<span>Jeopardy</span>
+	<h2>Jeopardy</h2>
 	<div class="spacer"></div>
 </div>
 
