--- a/fe-jeopardy/src/app/app.component.less
+++ b/fe-jeopardy/src/app/app.component.less
@@ -41,9 +41,13 @@ p {
     height: 60px;
     display: flex;
     align-items: center;
-    background-color: #1976d2;
+    background-color: #060ce9;
     color: white;
     font-weight: 600;
+
+    h2 {
+        margin-left: 1em;
+    }
 }
 
 .toolbar img {
