--- a/fe-jeopardy/src/app/app.component.less
+++ b/fe-jeopardy/src/app/app.component.less
@@ -1,10 +1,5 @@
 .content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 60px;
 }
 
 :host {
@@ -27,10 +22,6 @@ h6 {
 
 p {
     margin: 0;
-}
-
-.spacer {
-    flex: 1;
 }
 
 .toolbar {
