--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -1,3 +1,39 @@
+<div id='players' class='players-container'>
+	<div *ngFor="let player of game.Players()" class='box'>
+		<p [ngStyle]="{'color': player.score < 0 ? 'red' : 'black'}">{{ player.score < 0 ? '-' : '' }}${{
+				abs(player.score) }} </p>
+				<p [ngStyle]="{'font-weight': player.canPick ? 'bold' : 'normal'}">{{ player.conn ? player.name :
+					'Waiting for
+					player to join' }}</p>
+	</div>
+</div>
+
+<div id='game-container'>
+	<app-pre-game class='game-view' *ngIf="game.PreGame()" [gameMessage]="gameMessage"
+		[gameName]="game.Name()"></app-pre-game>
+
+	<app-recv-pick class='game-view' *ngIf="game.RecvPick()" [countdownSeconds]="countdownSeconds"></app-recv-pick>
+
+	<app-recv-buzz class='game-view' *ngIf="game.RecvBuzz()" [countdownSeconds]="countdownSeconds"></app-recv-buzz>
+
+	<app-recv-ans class='game-view' *ngIf="game.RecvAns()" [countdownSeconds]="countdownSeconds"></app-recv-ans>
+
+	<app-recv-vote class='game-view' *ngIf="game.RecvVote()" [countdownSeconds]="countdownSeconds"></app-recv-vote>
+
+	<app-recv-wager class='game-view' *ngIf="game.RecvWager()" [countdownSeconds]="countdownSeconds"></app-recv-wager>
+
+	<app-post-game class='game-view' *ngIf="game.PostGame()"></app-post-game>
+</div>
+
+<app-chat></app-chat>
+
+<div id='share-link'>
+	<p *ngIf="game.PreGame() || game.PostGame() || game.IsPaused()">
+		Link to join: <span id='joinLink' (click)="openJoinLink()">{{gameLink}}/join/{{game.Name()}}</span>&nbsp;
+		<ion-icon name="copy-outline" id="copyLink" (click)="copyJoinLink()"></ion-icon>
+	</p>
+</div>
+
 <div *ngIf="showMusic" id='jeopardy-music'>
 	<ion-icon (click)="stopMusic()" *ngIf="playMusic" name="volume-high-outline"></ion-icon>
 	<ion-icon (click)="startMusic()" *ngIf="!playMusic" name="volume-mute-outline"></ion-icon>
@@ -9,33 +45,3 @@
 		<source src="../../assets/jeopardy_music.mp3" />
 	</audio>
 </div>
-
-<div id='players' class='container'>
-	<div *ngFor="let player of game.Players()" class='box'>
-		<p [ngStyle]="{'color': player.score < 0 ? 'red' : 'black'}">{{ player.score < 0 ? '-' : '' }}${{
-				abs(player.score) }} </p>
-				<p [ngStyle]="{'font-weight': player.canPick ? 'bold' : 'normal'}">{{ player.conn ? player.name :
-					'Waiting for
-					player to join' }}</p>
-	</div>
-</div>
-
-<p *ngIf="game.PreGame() || game.PostGame() || game.IsPaused()">Link to join: <span id='joinLink'
-		(click)="openJoinLink()">{{gameLink}}/join/{{game.Name()}}</span>&nbsp;<ion-icon name="copy-outline"
-		id="copyLink" (click)="copyJoinLink()"></ion-icon></p>
-
-<app-pre-game *ngIf="game.PreGame()" [gameMessage]="gameMessage" [gameName]="game.Name()"></app-pre-game>
-
-<app-recv-pick *ngIf="game.RecvPick()" [countdownSeconds]="countdownSeconds"></app-recv-pick>
-
-<app-recv-buzz *ngIf="game.RecvBuzz()" [countdownSeconds]="countdownSeconds"></app-recv-buzz>
-
-<app-recv-ans *ngIf="game.RecvAns()" [countdownSeconds]="countdownSeconds"></app-recv-ans>
-
-<app-recv-vote *ngIf="game.RecvVote()" [countdownSeconds]="countdownSeconds"></app-recv-vote>
-
-<app-recv-wager *ngIf="game.RecvWager()" [countdownSeconds]="countdownSeconds"></app-recv-wager>
-
-<app-post-game *ngIf="game.PostGame()"></app-post-game>
-
-<app-chat></app-chat>
