--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="join-container">
     <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
 
     <button (click)="joinPublicGame(playerName)">Join any game</button>
@@ -7,6 +7,6 @@
     <button (click)="joinGameByCode(playerName, gameCode)">Join game by code</button>
 
     <button (click)="createPrivateGame(playerName)">Create a private game</button>
-</div>
 
-<button (click)="rejoin()">Disconnected? Click to rejoin</button>
+    <button (click)="rejoin()">Disconnected? Click to rejoin</button>
+</div>
