--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -9,30 +9,22 @@
 </div>
 
 <div id='game-container'>
-	<app-pre-game class='game-view' *ngIf="game.PreGame()" [gameMessage]="gameMessage"
-		[gameName]="game.Name()"></app-pre-game>
+	<app-pre-game *ngIf="game.PreGame()" [gameMessage]="gameMessage" [gameName]="game.Name()"></app-pre-game>
 
-	<app-recv-pick class='game-view' *ngIf="game.RecvPick()" [countdownSeconds]="countdownSeconds"></app-recv-pick>
+	<app-recv-pick *ngIf="game.RecvPick()" [countdownSeconds]="countdownSeconds"></app-recv-pick>
 
-	<app-recv-buzz class='game-view' *ngIf="game.RecvBuzz()" [countdownSeconds]="countdownSeconds"></app-recv-buzz>
+	<app-recv-buzz *ngIf="game.RecvBuzz()" [countdownSeconds]="countdownSeconds"></app-recv-buzz>
 
-	<app-recv-ans class='game-view' *ngIf="game.RecvAns()" [countdownSeconds]="countdownSeconds"></app-recv-ans>
+	<app-recv-ans *ngIf="game.RecvAns()" [countdownSeconds]="countdownSeconds"></app-recv-ans>
 
-	<app-recv-vote class='game-view' *ngIf="game.RecvVote()" [countdownSeconds]="countdownSeconds"></app-recv-vote>
+	<app-recv-vote *ngIf="game.RecvVote()" [countdownSeconds]="countdownSeconds"></app-recv-vote>
 
-	<app-recv-wager class='game-view' *ngIf="game.RecvWager()" [countdownSeconds]="countdownSeconds"></app-recv-wager>
+	<app-recv-wager *ngIf="game.RecvWager()" [countdownSeconds]="countdownSeconds"></app-recv-wager>
 
-	<app-post-game class='game-view' *ngIf="game.PostGame()"></app-post-game>
+	<app-post-game *ngIf="game.PostGame()"></app-post-game>
 </div>
 
 <app-chat></app-chat>
-
-<div id='share-link'>
-	<p *ngIf="game.PreGame() || game.PostGame() || game.IsPaused()">
-		Link to join: <span id='joinLink' (click)="openJoinLink()">{{gameLink}}/join/{{game.Name()}}</span>&nbsp;
-		<ion-icon name="copy-outline" id="copyLink" (click)="copyJoinLink()"></ion-icon>
-	</p>
-</div>
 
 <div *ngIf="showMusic" id='jeopardy-music'>
 	<ion-icon (click)="stopMusic()" *ngIf="playMusic" name="volume-high-outline"></ion-icon>
