--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -1,8 +1,8 @@
 <div id='players' class='players-container'>
-	<div *ngFor="let player of game.Players()" class='box'>
-		<p [ngStyle]="{'color': player.score < 0 ? 'red' : 'black'}">{{ player.score < 0 ? '-' : '' }}${{
-				abs(player.score) }} </p>
-				<p [ngStyle]="{'font-weight': player.canPick ? 'bold' : 'normal'}">{{ player.conn ? player.name :
+	<div *ngFor="let p of game.Players()" class='box'>
+		<p [ngStyle]="{'color': p.score < 0 ? 'red' : 'black'}">{{ p.score < 0 ? '-' : '' }}${{
+				abs(p.score) }} </p>
+				<p [ngStyle]="{'font-weight': p.id == player.Id() ? 'bold' : 'normal'}">{{ p.conn ? p.name :
 					'Waiting for
 					player to join' }}</p>
 	</div>
