--- a/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.html
+++ b/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.html
@@ -1,6 +1,6 @@
 <div>
-    <p *ngIf="game.PreviousQuestion() != ''">Previous question: {{ game.PreviousQuestion() }} </p>
-    <p *ngIf="game.PreviousAnswer() != ''">Previous answer: {{ game.PreviousAnswer() }}</p>
+    <p [ngStyle]="{'visibility': game.PreviousQuestion() != '' ? 'visible' : 'hidden'}">Previous question: {{ game.PreviousQuestion() }} </p>
+    <p [ngStyle]="{'visibility': game.PreviousAnswer() != '' ? 'visible' : 'hidden'}">Previous answer: <b>{{ game.PreviousAnswer() }}</b></p>
     <!-- <p>It's {{ player.CanPick() ? 'your' : game.PickingPlayer()+ '\'s' }} turn to pick a question</p> -->
     <table>
         <tr>
@@ -22,5 +22,5 @@
             </td>
         </tr>
     </table>
-    <p>seconds to pick: {{ countdownSeconds }}</p>
+    <p><b>{{ game.PickingPlayer() }}'s</b> turn to pick: {{ countdownSeconds }}</p>
 </div>
