--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -1,12 +1,23 @@
-<div class="join-container">
-    <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
+<div class='join-container'>
+    <div class='input-container'>
+        <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
 
-    <button (click)="joinPublicGame(playerName)">Join any game</button>
+        <div class='button-container'>
+            <button (click)="joinPublicGame(playerName)">Join any game</button>
+            <button style='margin-left: 10px; margin-right: 10px;' (click)="createPrivateGame(playerName)">Create a private game</button>
+            <button (click)="toggleGameCodeInput()">Join game by code</button>
+        </div>
+    </div>
+    
+    <div class='input-container'>
+        <input *ngIf="showGameCodeInput" (keydown.enter)="joinGameByCode(playerName, gameCode)" style='margin-top: 10px;' type="text" [(ngModel)]="gameCode" placeholder="Game code">
+    </div>
 
-    <input type="text" [(ngModel)]="gameCode" placeholder="Game code">
-    <button (click)="joinGameByCode(playerName, gameCode)">Join game by code</button>
-
-    <button (click)="createPrivateGame(playerName)">Create a private game</button>
-
-    <button (click)="rejoin()">Disconnected? Click to rejoin</button>
+    <hr>
+    
+    <div class='input-container'>
+        <div class='button-container'>
+            <button style='margin-top: 0' (click)="rejoin()">Disconnected? Click to rejoin</button>
+        </div>
+    </div>
 </div>
