--- a/fe-jeopardy/src/app/join/join.component.less
+++ b/fe-jeopardy/src/app/join/join.component.less
@@ -1,4 +1,56 @@
-.join-container input,
-.join-container button {
-    display: block;
+.join-container {
+    display: flex;
+    flex-direction: column;
+
+    div {
+        width: 500px;
+        margin: auto;
+    }
+
+    hr {
+        margin: 0;
+        width: 500px;
+        margin: 30px auto;
+        border: none; 
+        border-top: 1px solid grey;
+    }
+
+    .input-container:first-child {
+        margin-top: 30px;
+    }
+
+    .input-container {
+        display: flex;
+        flex-direction: column;
+
+        input {
+            width: 100%;
+            box-sizing: border-box;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid lightgrey;
+            outline: none;
+        }
+
+        input:focus {
+            outline: 1px solid; 
+            outline-color: grey;
+        }
+
+        .button-container {
+            display: flex;
+
+            button {
+                flex: 1;
+                width: 160px;
+                padding: 10px;
+                margin-top: 10px;
+            }
+
+            button:focus {
+                outline: 1px solid; 
+                outline-color: grey;
+            }
+        }
+    }
 }
