--- a/fe-jeopardy/src/app/game/recv-wager/recv-wager.component.html
+++ b/fe-jeopardy/src/app/game/recv-wager/recv-wager.component.html
@@ -1,20 +1,19 @@
 <div *ngIf="!game.FinalRound()">
-    <p>Category: {{ game.CurCategory() }} </p>
-    <div *ngIf="player.CanWager()">
+    <p class='question-category'>{{ game.CurCategory() }} </p>
+    <div class='wager-input' *ngIf="player.CanWager()">
         <input type="number" [(ngModel)]="wagerAmt" placeholder="Enter your wager">
         <button (click)="handleWager()">Wager</button>
     </div>
-    <p>seconds to wager: {{ countdownSeconds }}</p>
-
     <div *ngIf="!player.CanWager()">
         {{ game.WageringPlayer() }} is choosing a wager
     </div>
+    <p>seconds to wager: {{ countdownSeconds }}</p>
 </div>
 
 <div *ngIf="game.FinalRound()">
-    Final Jeopardy
-    <p>Category: {{ game.CurCategory() }} </p>
-    <div *ngIf="player.CanWager()">
+    <h2>Final Jeopardy</h2>
+    <p class='question-category'>{{ game.CurCategory() }} </p>
+    <div class='wager-input' *ngIf="player.CanWager()">
         <input type="number" [(ngModel)]="wagerAmt" placeholder="Enter your wager">
         <button (click)="handleWager()">Wager</button>
     </div>
